syntax = "proto3";

option go_package="github.com/wesley-lewis/learning-proto-buf/model";

message User {
	string user_id = 1;
	string email = 2;
}

message UserRequest {
	string user_id = 1;
}

service UserService {
	rpc GetUser(UserRequest) returns (User);
}
